2008-08-27  Sankar P  <psankar@novell.com>

License Changes

	* mark-all-read.c:

2008-08-07  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #530402

	* mark-all-read.c (prompt_user):
	Improve dialog wording, and don't use a window title (HIG).

2008-05-16  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #514383

	* mark-all-read.c: Add a Cancel button.

2007-12-20  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #362638

	* mark-all-read.c:
	Use the new MailMsg API for messages.

2007-11-18  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>

	** Fix bug #495875

	* org-gnome-mark-all-read.eplug.xml:
	right click menu reordering

2007-11-05  Michael Monreal  <mmonreal@svn.gnome.org>

	** Fix for bug #492102

	* org-gnome-mark-all-read.eplug.xml: Use mail-mark-read icon.

2007-05-14  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #325965 from Ilkka Tuohela

	* mark-all-read.c: (mar_got_folder):

2007-04-02  Sankar P  <psankar@novell.com>

	* Committed on behalf of Gilles Dartiguelongue <dartigug@esiee.fr>

	* org-gnome-mark-all-read.eplug.xml:
	Cleanup. 
	Fixes part of #301149

2007-03-20  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #419524

	* Include <glib/gi18n.h> instead of <libgnome/gnome-i18n.h>.

2006-07-04  Karsten Bräckelmann  <guenther@rudersport.de>

	* org-gnome-mark-all-read.eplug.xml: Using proper header
	capitalization for the menu entry. Fixes bug #318755.

2005-12-25  Funda Wang  <fundawang@linux.net.cn>

	* Makefile.am: Mark this plugin as translatable (bug#301149).

2005-12-12  Harish Krishnaswamy  <kharish@novell.com>

	* Makefile.am: Fix make-clean issues.

2005-12-07  Funda Wang  <fundawang@linux.net.cn>

	* org-gnome-mark-all-read.eplug.in: i18nlized.

2005-06-27  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Use NO_UNDEFINED. Link with more libraries.

2005-06-18  Tor Lillqvist  <tml@novell.com>

	* org-gnome-mark-all-read.eplug.in: Use SOEXT.
