@@ -1,3 +1,10 @@
+2008-09-02  Paul Bolle <pebolle@tiscali.nl>
+
+	** Fixes bug #550415
+
+	* mark-all-read.c (mar_got_folder): Do not leak an CamelFolderInfo.
+	Slightly change handling of CamelException.
+
 2008-08-27  Sankar P  <psankar@novell.com>
 
 License Changes
